# salon-marketing

./: .buildinfo  .gitignore  Makefile  README.html  README.md  conf.py  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js  watch.py
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/research/: content-calendar.doctree  index.doctree
.github/workflows/: deploy.yml
_sources/: README.md.txt
_sources/research/: content-calendar.md.txt  index.md.txt
research/: content-calendar.html  index.html
